--- a/index.html
+++ b/index.html
@@ -1,1 +1,194 @@
-Hello World
+<!doctype html>
+<html lang="ko">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>조엄지의 포트폴리오</title>
+<link rel="stylesheet" href="CSS/common.css" />
+<link rel="stylesheet" href="CSS/master.css" />
+<link rel="stylesheet" href="CSS/header.css" />
+<link rel="stylesheet" href="CSS/slider.css" />
+<script src="js/jquery-3.4.1.min.js"></script>
+</head>
+<body>
+
+<script>
+	$( window ).on( "orientationchange", function( event ) {
+	  if (parseInt(document.body.offsetWidth) > 560)
+	  {
+		//alert(parseInt(document.body.offsetWidth));
+		$('.portrait_view').css('display','none');
+	  }else
+	  {
+		//alert(parseInt(document.body.offsetWidth));
+		$('.portrait_view').css('display','block');
+	  }
+	} );
+	</script>
+	<div class="portrait_view"></div>
+
+<input id="toggle" type="checkbox">
+
+<div id="wrap">
+	<header id="main_header">
+		<h2 id="logo"><a href="index.html"><img src="images/logo.png" alt="로고" /></a></h2>
+			<label for="toggle" class="toggle"></label>
+			<ul id="main_nav">
+				<li class="hover"><span>01</span><a href="index.html">MAIN</a></li>
+				<div class="black_bar"></div>
+				<li><span>02</span><a href="about_me.html">ABOUT ME</a></li>
+				<li><span>03</span><a href="portfolio.html">PORTFOLIO</a></li>
+				<li><span>04</span><a href="contact.html">CONTACT</a></li>
+			</ul>
+	</header>
+
+	<script>
+	$(function(){
+		var index=0;
+		var width=0;
+
+		$("#slider > .btn_next").click(function(){
+			$(".slider_bar > ul > li.timer_bar > .timer").css({height:0});
+			$(".slider_bar > ul > li.timer_bar > .timer").stop().animate({ height:100+"%"},3000);
+
+			index++;
+			if(index>3){
+				index=0;	
+			}
+			show();
+			$(".slider_bar > ul > li.count > p.current").text("0"+(index+1));
+		});
+
+		$(" #slider > .btn_prev").click(function(){
+			$(".slider_bar > ul > li.timer_bar > .timer").css({height:0});
+			$(".slider_bar > ul > li.timer_bar > .timer").stop().animate({ height:100+"%"},3000);
+
+			index--;
+			if(index<0){
+				index=3;	
+			}
+			show();	
+			$(".slider_bar > ul > li.count > p.current").text("0"+(index+1));
+		});
+
+		autoSlide();
+
+		function show(){
+			$("#slider > article").removeClass("show");
+			$("#slider > article").eq(index).addClass("show");	
+		}
+
+		function autoSlide(){
+			$(".slider_bar > ul > li.timer_bar > .timer").css({height:0});
+			$(".slider_bar > ul > li.timer_bar > .timer").stop().animate({ height:100+"%"},3000);
+			setInterval(function(){
+				$("#slider > .btn_next").click();
+			},5000);
+		}
+	});
+	</script>
+
+	<section id="slider">
+		<article id="slider_con1" class="show">
+			<div class="title">
+				<h4>Respansive Web</h4>
+				<h3>Maison Kitsuné<h3>
+			</div>
+			<div class="b1"><a>배너1</a></div>
+		</article>
+
+		<article id="slider_con2">
+			<div class="title">
+				<h4>Respansive Web</h4>
+				<h3>Hyundai Card<h3>
+			</div>
+			<div class="b2"><a>배너2</a></div>
+		</article>
+
+		<article id="slider_con3">
+			<div class="title">
+				<h4>Respansive Web</h4>
+				<h3>Aesop<h3>
+			</div>
+			<div class="b3"><a>배너3</a></div>
+		</article>
+
+		<article id="slider_con4">
+			<div class="title">
+				<h4>Respansive Web</h4>
+				<h3>SSang Yong<h3>
+			</div>
+			<div class="b4"><a>배너4</a></div>
+		</article>
+
+		<button class="btn_prev">Prev</button>
+		<button class="btn_next">Next</button>
+
+		<script>
+		$(function(){
+			$(".slider_bar").mouseenter(function(){
+				$(this).addClass("hover");
+				$("#slider").addClass("hover");
+			});
+			$("#hover_bar").mouseleave(function(){
+				$(".slider_bar").removeClass("hover");
+				$("#slider").removeClass("hover");
+			});
+		});
+		</script>
+		<div class="slider_bar">
+			<ul>
+				<li class="count">
+					<p class="current">01</p>
+					<span>-</span>
+					<p class="total">04</p>
+				</li>
+				<li class="timer_bar">
+					<span class="timer" style="height: 100%; overflow: hidden;"></span>
+				</li>
+			</ul>
+		</div>
+
+		<div id="hover_bar">
+			<ul>
+				<li id="web_publishing">
+					<a id="web_p1"></a>
+					<a id="web_p2"></a>
+					<a id="web_p3" class="p3"></a>
+					<a id="web_p4" class="p4"></a>
+				</li>
+			</ul>
+		</div><!--//hoverbar-->
+	</section>
+	
+	<script>
+	$(function(){
+		$("#hover_bar > ul > li > a#web_p1").mouseenter(function(){
+			$(this).addClass("show");
+			$("#slider_con2, #slider_con3, #slider_con4").removeClass("show");
+			$("#slider > #slider_con1").addClass("show");
+		});
+
+		$("#hover_bar > ul > li > a#web_p2").mouseenter(function(){
+			$(this).addClass("show");
+			$("#slider_con1, #slider_con3, #slider_con4").removeClass("show");
+			$("#slider > #slider_con2").addClass("show"); 
+		});
+
+		$("#hover_bar > ul > li > a#web_p3").mouseenter(function(){
+			$(this).addClass("show");
+			$("#slider_con1, #slider_con2, #slider_con4").removeClass("show");
+			$("#slider > #slider_con3").addClass("show"); 
+		});
+
+		$("#hover_bar > ul > li > a#web_p4").mouseenter(function(){
+			$(this).addClass("show");
+			$("#slider_con1, #slider_con2, #slider_con3").removeClass("show");
+			$("#slider > #slider_con4").addClass("show"); 
+		});
+	});
+	</script>
+</div><!--//wrap-->
+
+</body>
+</html>
